# obj-conv

./: .gitignore  CMakeLists.txt  README.md  demo.cpp
.github/workflows/: linux.yml  windows.yml
reflex_format/: reflex_format.hpp  rw_binary.hpp  rw_ini.hpp  rw_json.hpp  rw_traits_type.hpp  rw_xml.hpp
sw-json/: rw_json.hpp  rw_traits_type.hpp  sw_json.hpp
sw-protocol/: rw_json.hpp  rw_traits_type.hpp  rw_xml.hpp  sw_protocol.hpp
test/: test.cpp
unit_test/: CMakeLists.txt  test.cpp
